Tue Oct 24 22:01:41 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_NS_stdlib.inl (atop):

          Use intptr_t type to fix 64-bit conversion to void* warnings.

        * ace/Select_Reactor_Base.h (max_handlep1):
        * ace/Select_Reactor_Base.inl (max_handlep1):

          Changed return type to be ACE_HANDLE on UNIX platforms instead
          of size_t.  Addresses "loss of significant bits" warnings in
          64-bit Intel compiler builds.

        * ace/Select_Reactor_Base.cpp (dump):

          Corrected format specifiers for Windows configuration.

        * ace/Select_Reactor_T.cpp (work_pending):
          (wait_for_multiple_events):

          Removed unnecessary casts and corrected type of "width" variable
          that is passed to select().

        * tests/Map_Manager_Test.cpp (test_cache_map_manager):

          Fixed "might be used uninitialized" warning.

Tue Oct 24 17:46:40 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Truncate.h (Truncator):

          Export the Borland-specific specializations from the DLL.  This
          should address the "undefined symbol" link-time problem.

        * bin/MakeProjectCreator/config/acexml.mpb:

          Re-disabled ACEXML when ace_for_tao is enabled.  ACEXML needs
          the ACE_Configuration and memory map classes that are not found
          in the ace_for_tao subset.

Tue Oct 24 14:44:09 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/TTY_IO.cpp:
        
          Changed the default constructor to always initialise member
          variables regardless of ACE_HAS_TERMIOS or ACE_HAS_TERMIO setting.

Tue Oct 24 14:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
          Use some bools instead of int

        * ace/INET_Addr.cpp (set_port_number):
          Added check for ACE_LACKS_HTONS

        * ace/INET_Addr.inl (get_port_number):
          Added check for ACE_LACKS_NTOHS
